--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,5 @@
     <string name="no_token">Connect the token please</string>
     <string name="pin_hint">Input PIN</string>
     <string name="ok">OK</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-
+    <string name="pin_alert">PIN incorrect, try again</string>
 </resources>
