--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
         Корр. счет №30101810900000000409 в Отделении 3 Главного управления Центрального банка Российской Федерации
         по Центральному федеральному округу г. Москва (сокращенное наименование - Отделение 3 Москва)
         БИК 044599409, ИНН 7744000126, КПП 775001001</string>
+    <string name="error">Internal error</string>
 </resources>
