--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,9 +9,6 @@
     <string name="ok">OK</string>
     <string name="pin_alert">Неправильный PIN, попробуйте ещё раз</string>
     <string name="sign">Подписать и отправить</string>
-    <string name="payment_data">КБ «Ренессанс Кредит» (ООО) г. Москва
-        Корр. счет №30101810900000000409 в Отделении 3 Главного управления Центрального банка Российской Федерации
-        по Центральному федеральному округу г. Москва (сокращенное наименование - Отделение 3 Москва)
-        БИК 044599409, ИНН 7744000126, КПП 775001001</string>
     <string name="error">Внутренняя ошибка</string>
+    <string name="done">Операция завершена</string>
 </resources>
