--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,6 @@
     <string name="ok">OK</string>
     <string name="pin_alert">PIN incorrect, try again</string>
     <string name="sign">Sign and Send</string>
-    <string name="payment_data">КБ «Ренессанс Кредит» (ООО) г. Москва
-        Корр. счет №30101810900000000409 в Отделении 3 Главного управления Центрального банка Российской Федерации
-        по Центральному федеральному округу г. Москва (сокращенное наименование - Отделение 3 Москва)
-        БИК 044599409, ИНН 7744000126, КПП 775001001</string>
     <string name="error">Internal error</string>
+    <string name="done">Operation finished</string>
 </resources>
