--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,4 +25,5 @@
     <string name="install_control_panel">Установить</string>
     <string name="need_sm_activate">Необходима активация шифрования канала</string>
     <string name="failed_to_add_token">Не удалось подключить токен</string>
+    <string name="please_attach_nfc_card">Поднесите NFC-карту</string>
 </resources>
