--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="need_sm_activate">Secure messaging activation is required</string>
     <string name="failed_to_add_token">Failed to add token</string>
     <string name="please_attach_nfc_card">Attach a NFC card</string>
+    <string name="select">Select</string>
+    <string name="sign_in">Sign in</string>
 </resources>
