--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,4 +26,6 @@
     <string name="need_sm_activate">Необходима активация шифрования канала</string>
     <string name="failed_to_add_token">Не удалось подключить токен</string>
     <string name="please_attach_nfc_card">Поднесите NFC-карту</string>
+    <string name="select">Выбрать</string>
+    <string name="sign_in">Войти</string>
 </resources>
