Add ProgressBar and cancel button to NfcFragment

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,4 +33,5 @@
     <string name="please_attach_nfc_card">Поднесите NFC-карту</string>
     <string name="select">Выбрать</string>
     <string name="sign_in">Войти</string>
+    <string name="cancel">Отмена</string>
 </resources>
