--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="please_attach_nfc_card">Attach a NFC card</string>
     <string name="select">Select</string>
     <string name="sign_in">Sign in</string>
+    <string name="cancel">Cancel</string>
 </resources>
