--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,7 +6,7 @@
                             \nВключите Bluetooth на этом устройстве и свяжите его с Рутокен Bluetooth.\n
                             \nили\n
                             \nПодключите Рутокен в USB-разъем.</string>
-    <string name="wait_token" formatted="false">Потеряна связь с устройством с серийным номером %s
+    <string name="wait_token">Потеряна связь с устройством с серийным номером %s
                                                 \n\nПодключите Рутокен или поднесите NFC-карту Рутокен снова</string>
     <string name="no_certificate">На Рутокене нет сертификата
                                   \n\nСоздайте ключ и сертификат, например, на настольном компьютере с помощью простого веб-сервиса ra.rutoken.ru</string>
@@ -17,7 +17,7 @@
     <string name="error">Внутренняя ошибка</string>
     <string name="done">Операция завершена</string>
     <string name="need_pin_message">Для отправки потребуется ввод PIN.</string>
-    <string name="batch_sign_message" formatted="false">Количество платежных поручений: %d.</string>
+    <string name="batch_sign_message">Количество платежных поручений: %d.</string>
     <string name="batch_require_proceed">Пожалуйста, подтвердите отправку.</string>
     <string name="rutoken">Рутокен</string>
     <string name="payment">Платежное поручение №</string>
