Fix wrong state of a TokenManagerListener on the application relaunch
On Application relaunch UI was viewing Token information from previous launch, 
and selectButton was looking unclickable.

TokenManagerListener was not initialized correctly on a MainActivity relaunch.

Also tokenRemoved events were missed during configuration change.
This happened because of usage LocalBroadcastReceiver as mediator to pass events.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,4 +37,5 @@
     <string name="cancel">Отмена</string>
     <string name="disconnect">Отключить</string>
     <string name="continue_str">Понятно</string>
+    <string name="rutoken_not_found">Рутокен не найден</string>
 </resources>
