--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,7 +17,7 @@
     <string name="error">Внутренняя ошибка</string>
     <string name="done">Операция завершена</string>
     <string name="need_pin_message">Для отправки потребуется ввод PIN.</string>
-    <string name="batch_sign_message">Количество платежных поручений: %d.</string>
+    <string name="batch_sign_message">Количество платежных поручений:\u00A0%d.</string>
     <string name="batch_require_proceed">Пожалуйста, подтвердите отправку.</string>
     <string name="rutoken">Рутокен</string>
     <string name="payment">Платежное поручение №</string>
