--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="disconnect">Disconnect</string>
     <string name="continue_str">Continue</string>
     <string name="rutoken_not_found">Rutoken not found</string>
+    <string name="privacy_policy">Privacy policy</string>
 </resources>
